Mon Sep 20 23:23:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket): get rid of scanning at the end of the pattern
	  string, not to raise an exception while globbing command line.
	  [ruby-core:32478]

Fri Sep 17 23:44:07 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xpath_parser.rb, test/rexml/test_xpath.rb:
	add missing method availability check. [ruby-core:32447]
	Reported by Wiebe Cazemier. Thanks!!!

Fri Sep 17 23:23:26 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_sax.rb: don't use thread and sleep to avoid slow test.

Fri Sep 17 23:10:44 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_core.rb: enable.

Fri Sep 17 22:46:02 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: untabify.

Fri Sep 17 22:29:56 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: fix fixture data path. All REXML tests are worked.

Fri Sep 17 22:15:15 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_listener.rb: remove needless codes.

Fri Sep 17 22:12:23 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: import REXML tests from
	http://www.germane-software.com/repos/rexml/trunk/test/.
	Many tests are failed temporary. I'll fix them quickly. Sorry.

Fri Sep 17 08:30:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tracer.rb: count only non-internal libraries in stack trace,
	  ignoring custom_require.  [ruby-core:31858]

Thu Sep 16 08:30:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): fix rdoc.  pointed out by Tomoyuki
	  Chikanaga at [ruby-core:32395], and a patch from Daniel
	  Bovensiepen at [ruby-core:32403].

Thu Sep 16 08:27:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/extconf.rb: use expanded sysconfdir with empty DESTDIR.
	  [ruby-core:32394]

Wed Sep 15 13:37:00 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/net/imap/test_imap.rb: "localhost" not guaranteed to
	  resolve to "127.0.0.1".  On my machine it is "::1" instead.