@@ -1175,3 +1175,8 @@ assert_equal 'ok', %q{
     'ok'
   end
 }
+assert_equal 'ok', %q{
+  p [0][0, &proc{}] += 21
+  'ok'
+}, '[ruby-core:30534]'
+
