@@ -1,3 +1,7 @@
+Wed Sep 22 01:49:52 2010  Koichi Sasada  <ko1@atdot.net>
+
+	* bootstraptest/test_method.rb: add a test for [ruby-core:30534].
+
 Mon Sep 20 23:23:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (bracket): get rid of scanning at the end of the pattern
